tests/snapshots/diff__a_link_an_installer_turned_into_a_directory_is_compared_with_its_source.snap
---
source: tests/diff.rs
expression: r.stdout
---
diff: profile `new` against the live filesystem
root: <HOME>/rice/new (by reference — ricepilot never writes here)

links: 2 of 3 differ
  DIFFERS  <HOME>/.config/hypr
             live:    a real directory, not a link
             profile: a link to <HOME>/rice/new/hypr
             its content is the source's, outside `volatile`.
               1 further path has identical content and another modification time.
  DIFFERS  <HOME>/.config/foot
             live:    a real directory, not a link
             profile: a link to <HOME>/rice/new/foot
             in the directory, against the source (`added`: only in the directory; `gone`: only in the source):
               added        foot.ini (file)
               changed      marker
  same     <HOME>/.config/btop -> <HOME>/rice/new/btop

content: the tree is what ricepilot recorded at <TS>.
  (<HOME>/.local/state/ricepilot/manifests/new.toml, 6 paths)

volatile: 3 paths not compared, because the manifest declares `**/*.log` volatile:
  btop/noise.log
  foot/noise.log
  hypr/noise.log

differs: 2 links.
`ricepilot plan new` shows what a switch would do about the links.
nothing was changed.
