tests/snapshots/diff__a_missing_link_and_a_missing_source_differ.snap
---
source: tests/diff.rs
expression: r.stdout
---
diff: profile `new` against the live filesystem
root: <HOME>/rice/new (by reference — ricepilot never writes here)

links: 2 of 3 differ
  same     <HOME>/.config/hypr -> <HOME>/rice/new/hypr
  DIFFERS  <HOME>/.config/foot
             live:    ricepilot's link to <HOME>/rice/new/foot, for profile `new`
             profile: a link to <HOME>/rice/new/foot
             source:  missing — nothing is there, so a link to it dangles
  DIFFERS  <HOME>/.config/btop
             live:    nothing
             profile: a link to <HOME>/rice/new/btop

content: 2 paths have changed since ricepilot recorded the tree at <TS>:
  (<HOME>/.local/state/ricepilot/manifests/new.toml, 6 paths)
  gone         foot (was a directory)
  gone         foot/marker (was a file)

volatile: 2 paths not compared, because the manifest declares `**/*.log` volatile:
  btop/noise.log
  hypr/noise.log

differs: 2 links and 2 paths.
`ricepilot plan new` shows what a switch would do about the links.
nothing was changed.
