tests/snapshots/diff__a_real_directory_that_cannot_be_compared_says_why.snap
---
source: tests/diff.rs
expression: r.stdout
---
diff: profile `new` against the live filesystem
root: <HOME>/rice/new (by reference — ricepilot never writes here)

links: 1 of 3 differ
  same     <HOME>/.config/hypr -> <HOME>/rice/new/hypr
  DIFFERS  <HOME>/.config/foot
             live:    a real directory, not a link
             profile: a link to <HOME>/rice/new/foot
             its content was NOT compared with the source: opening <HOME>/.config/foot/secret: Permission denied (os error 13)
  same     <HOME>/.config/btop -> <HOME>/rice/new/btop

content: the tree is what ricepilot recorded at <TS>.
  (<HOME>/.local/state/ricepilot/manifests/new.toml, 6 paths)

volatile: 3 paths not compared, because the manifest declares `**/*.log` volatile:
  btop/noise.log
  foot/noise.log
  hypr/noise.log

differs: 1 link.
`ricepilot plan new` shows what a switch would do about the links.
nothing was changed.
