tests/snapshots/diff__drift_in_the_tree_and_in_the_links_exits_six.snap
---
source: tests/diff.rs
expression: r.stdout
---
diff: profile `new` against the live filesystem
root: <HOME>/rice/new (by reference — ricepilot never writes here)

links: 1 of 3 differ
  same     <HOME>/.config/hypr -> <HOME>/rice/new/hypr
  DIFFERS  <HOME>/.config/foot
             live:    a link to <HOME>/rice/old/foot, and not the one ricepilot recorded here
             profile: a link to <HOME>/rice/new/foot
  same     <HOME>/.config/btop -> <HOME>/rice/new/btop

content: 3 paths have changed since ricepilot recorded the tree at <TS>:
  (<HOME>/.local/state/ricepilot/manifests/new.toml, 6 paths)
  metadata     btop/marker (mode 0644 -> 0600)
  added        foot/extra.ini (file)
  changed      hypr/marker

volatile: 3 paths not compared, because the manifest declares `**/*.log` volatile:
  btop/noise.log
  foot/noise.log
  hypr/noise.log

differs: 1 link and 3 paths.
`ricepilot plan new` shows what a switch would do about the links.
nothing was changed.
